--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "rust-analyzer.linkedProjects": [
-        "./day3/Cargo.toml",
-        "./day3/Cargo.toml",
-        "./day3/Cargo.toml",
-        "./day3/Cargo.toml"
-    ]
+    "rust-analyzer.linkedProjects": ["./day3/Cargo.toml"]
 }
