--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "rust-analyzer.linkedProjects": ["./day3/Cargo.toml"]
+    "rust-analyzer.linkedProjects": ["./day3/Cargo.toml", "./day4/Cargo.toml"]
 }
